--- a/.gitignore
+++ b/.gitignore
@@ -435,3 +435,8 @@ FodyWeavers.xsd
 *.out
 *.app
 
+NimCSharp/obj/Debug/net7.0/NimCSharp.GeneratedMSBuildEditorConfig.editorconfig
+*.cache
+NimCSharp/obj/Debug/net7.0/NimCSharp.AssemblyInfo.cs
+*.vsidx
+*.vsidx
