--- a/.gitignore
+++ b/.gitignore
@@ -440,3 +440,5 @@ NimCSharp/obj/Debug/net7.0/NimCSharp.GeneratedMSBuildEditorConfig.editorconfig
 NimCSharp/obj/Debug/net7.0/NimCSharp.AssemblyInfo.cs
 *.vsidx
 *.vsidx
+NimCSharp/.vs/NimCSharp/FileContentIndex/6e975a0a-09db-4300-a78b-4422a4eb920c.vsidx
+NimCSharp/.vs/NimCSharp/FileContentIndex/e650809b-52fd-418b-bbbe-0b6673d2a386.vsidx
