adding game manager

--- a/.gitignore
+++ b/.gitignore
@@ -454,3 +454,7 @@ NimCSharp/obj/Debug/net7.0/NimCSharp.AssemblyInfo.cs
 NimCSharp/obj/Debug/net7.0/NimCSharp.AssemblyInfoInputs.cache
 NimCSharp/obj/Debug/net7.0/NimCSharp.assets.cache
 NimCSharp/obj/Debug/net7.0/NimCSharp.GeneratedMSBuildEditorConfig.editorconfig
+NimCSharp/obj/Debug/net7.0/NimCSharp.GeneratedMSBuildEditorConfig.editorconfig
+NimCSharp/obj/Debug/net7.0/NimCSharp.assets.cache
+NimCSharp/obj/Debug/net7.0/NimCSharp.AssemblyInfoInputs.cache
+NimCSharp/obj/Debug/net7.0/NimCSharp.AssemblyInfo.cs
