added cache files to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -459,3 +459,4 @@ NimCSharp/obj/Debug/net7.0/NimCSharp.assets.cache
 NimCSharp/obj/Debug/net7.0/NimCSharp.AssemblyInfoInputs.cache
 NimCSharp/obj/Debug/net7.0/NimCSharp.AssemblyInfo.cs
 *.v2
+*.cache
