--- a/.gitignore
+++ b/.gitignore
@@ -460,3 +460,4 @@ NimCSharp/obj/Debug/net7.0/NimCSharp.AssemblyInfoInputs.cache
 NimCSharp/obj/Debug/net7.0/NimCSharp.AssemblyInfo.cs
 *.v2
 *.cache
+*.cache
