--- a/.gitignore
+++ b/.gitignore
@@ -463,3 +463,9 @@ NimCSharp/obj/Debug/net7.0/NimCSharp.AssemblyInfo.cs
 *.cache
 *.json
 *.cache
+NimCSharp/.vs/NimCSharp/v17/.suo
+*.v2
+NimCSharp/.vs/NimCSharp/v17/.suo
+*.v2
+NimCSharp/obj/Debug/net7.0/NimCSharp.AssemblyInfo.cs
+NimCSharp/obj/Debug/net7.0/NimCSharp.assets.cache
